# OCaml-dating

./: .gitignore  LICENSE  README.md
final-backend-master/: .ocamlformat  .ocamlinit  Makefile  README.md  backend.opam  dune-project  example_db.json  install.txt
final-backend-master/main/: dune  main.ml
final-backend-master/seed/: dune  seed.ml
final-backend-master/src/: application.ml  application.mli  auth.ml  auth.mli  authors.mli  db.ml  db.mli  dune  json_util.ml  json_util.mli  matcher.ml  matcher.mli  mserver.ml  mserver.mli  opium_util.ml  opium_util.mli  questions.json  rating.ml  rating.mli  survey.ml  survey.mli  tables.ml  tables.mli
final-backend-master/test/: dune  test.ml  test_qs1.json
final-backend-ws-main/: INSTALL.txt  README.md  mclient.py  ws.py
final-frontend-master/: README.md  install.txt  package-lock.json
final-frontend-master/app/: package-lock.json  package.json
final-frontend-master/app/src/: App.js
final-frontend-master/app/src/components/Matching/: index.js
final-frontend-master/app/src/components/Messaging/: Modal.js  Star.js  index.js  messages.css  modal.css  stars.css
final-frontend-master/app/src/components/SignIn/: index.js
final-frontend-master/app/src/components/SignUp/: index.js
final-frontend-master/app/src/components/Survey/: index.js
final-frontend-master/app/src/components/UserProfile/: index.js
final-frontend-master/app/src/components/Welcome/: index.js
final-frontend-master/app/src/utils/: ws_util.js
