(lang dune 2.8)

(generate_opam_files true)

(name backend)

(package
 (name backend)
 (depends
  ;; General system dependencies
  (dune
   (>= 2))
  (ocaml
   (>= 4.08.0))
  ;; Standard library replacement
  (core
   (>= v0.12.2))
  ;; Web toolkit
  (opium
   (>= 0.17.1))
  ;; Database interface
  (irmin-unix
   (>= 2.5.1))
  (mirage-crypto
   (= 0.9.2))
  ;; Logging
  (logs
   (>= 0.7.0))
  hex
  ;; Dev dependencies
  (utop :dev)
  (merlin :dev)
  (ocamlformat :dev)
  (opium-testing :dev)))
